KISS max-length

--- a/src/components/textarea/textarea.html
+++ b/src/components/textarea/textarea.html
@@ -1,8 +1,8 @@
 <div class="m-textarea"
      :class="{ 'm--is-disabled' : isDisabled,
                'm--is-waiting' : isWaiting,
-               'm--has-error' : textareaError,
-               'm--is-valid' : textareaValid,
+               'm--has-error' : hasTextAreaError,
+               'm--is-valid' : isTextAreaValid,
                'm--is-focus' : isFocus,
                'm--has-icon' : hasIcon,
                'm--has-label': hasLabel }"
@@ -10,8 +10,8 @@
      :style="{ width: inputWidth, maxWidth: inputMaxWidth }">
     <m-input-style :disabled="isDisabled"
                    :waiting="isWaiting"
-                   :error="textareaError"
-                   :valid="isValid"
+                   :error="hasTextAreaError"
+                   :valid="isTextAreaValid"
                    :label="label"
                    :focus="isFocus"
                    :empty="isEmpty"
@@ -19,21 +19,21 @@
                    :required-marker="requiredMarker">
 
                 <textarea class="m-textarea-resize m-textarea__input"
-                :class="{ 'm--is-diabled' : disabled,
-                        'm--is-readonly': readonly,
-                        'm--is-focus': isFocus }"
-                :disabled="!active"
-                :placeholder="placeholder"
-                :readonly="readonly"
-                rows="1"
-                @focus="onFocus"
-                @blur="onBlur"
-                @change="onChange"
-                @keyup="onKeyup"
-                @keydown="onKeydown"
-                @paste="onPaste"
-                ref="input"
-                v-model="model"></textarea>
+                            :class="{ 'm--is-diabled' : disabled,
+                                    'm--is-readonly': readonly,
+                                    'm--is-focus': isFocus }"
+                            :disabled="!active"
+                            :placeholder="placeholder"
+                            :readonly="readonly"
+                            rows="1"
+                            @focus="onFocus"
+                            @blur="onBlur"
+                            @change="onChange"
+                            @keyup="onKeyup"
+                            @keydown="onKeydown"
+                            @paste="onPaste"
+                            ref="input"
+                            v-model="model"></textarea>
 
     </m-input-style>
     <div class="m-textarea__validation">
@@ -41,12 +41,12 @@
             class="m-textarea__validation__message"
             :disabled="isDisabled"
             :waiting="isWaiting"
-            :error="textareaError"
+            :error="hasTextAreaError"
             :error-message="errorMessage"
             :valid-message="validMessage"
             :helper-message="helperMessage"></m-validation-message>
-        <div class="m-textarea__validation__maxlenght" v-if="hasMaxlenght">
-            {{ valueLenght }}<strong>/{{ maxlength }}</strong>
+        <div class="m-textarea__validation__maxlenght" v-if="hasMaxLength">
+            {{ valueLength }}<strong>/{{ maxLength }}</strong>
         </div>
     </div>
 </div>
