--- a/src/components/textarea/textarea.html
+++ b/src/components/textarea/textarea.html
@@ -17,24 +17,23 @@
                    :empty="isEmpty"
                    :icon-name="iconName"
                    :required-marker="requiredMarker">
-
-                <textarea class="m-textarea-resize m-textarea__input"
-                            :class="{ 'm--is-diabled' : disabled,
-                                    'm--is-readonly': readonly,
-                                    'm--is-focus': isFocus }"
-                            :disabled="!active"
-                            :placeholder="placeholder"
-                            :readonly="readonly"
-                            rows="1"
-                            @focus="onFocus"
-                            @blur="onBlur"
-                            @change="onChange"
-                            @keyup="onKeyup"
-                            @keydown="onKeydown"
-                            @paste="onPaste"
-                            ref="input"
-                            v-model="model"></textarea>
-
+        <textarea v-m-textarea-auto-height
+                  class="m-textarea__input"
+                  :class="{ 'm--is-diabled' : disabled,
+                            'm--is-readonly': readonly,
+                            'm--is-focus': isFocus }"
+                  :disabled="!active"
+                  :placeholder="placeholder"
+                  :readonly="readonly"
+                  rows="1"
+                  @focus="onFocus"
+                  @blur="onBlur"
+                  @change="onChange"
+                  @keyup="onKeyup"
+                  @keydown="onKeydown"
+                  @paste="onPaste"
+                  v-model="model">
+        </textarea>
     </m-input-style>
     <div class="m-textarea__validation">
         <m-validation-message
