--- a/src/components/textarea/textarea.html
+++ b/src/components/textarea/textarea.html
@@ -18,6 +18,7 @@
                    :icon-name="iconName"
                    :required-marker="requiredMarker">
         <textarea v-m-textarea-auto-height
+                  ref="input"
                   class="m-textarea__input"
                   :class="{ 'm--is-diabled' : disabled,
                             'm--is-readonly': readonly,
