--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -7,7 +7,7 @@
     overflow: hidden;
 
     &.m--is-skin-dark {
-        background-color: $m-color--grey-darker;
+        background-color: $m-color--grey-darkest;
         // min-height: $m-touch-size*2;
 
         // &::before {
