--- a/src/components/inplace-edit/inplace-edit.scss
+++ b/src/components/inplace-edit/inplace-edit.scss
@@ -1,3 +1,11 @@
 .DISPLAYFLEX {
     display: flex;
 }
+
+.BLUE-BACKGROUND {
+    background: lightblue;
+}
+
+.RED-BACKGROUND {
+    background: lightpink;
+}
