--- a/src/components/inplace-edit/inplace-edit.scss
+++ b/src/components/inplace-edit/inplace-edit.scss
@@ -3,9 +3,9 @@
 }
 
 .BLUE-BACKGROUND {
-    background: lightblue;
+    background-color: lightblue;
 }
 
 .RED-BACKGROUND {
-    background: lightpink;
+    background-color: lightpink;
 }
