--- a/src/components/accordion/accordion.scss
+++ b/src/components/accordion/accordion.scss
@@ -1,4 +1,5 @@
 @import '../../styles/abstracts/variables';
+@import 'accordion-transition';
 
 $m-accordion--icon-l-width: 16px;
 $m-accordion--icon-width: 12px;
@@ -121,6 +122,7 @@ $m-accordion--color-default: $m-color--interactive;
 
             &__body-wrap {
                 border-bottom: 1px $m-color--border solid;
+
                 &.accordion-enter-to {
                     .m-accordion__body {
                         transform: translate3d(0, 0, 0);
