--- a/src/components/accordion/accordion.html
+++ b/src/components/accordion/accordion.html
@@ -11,7 +11,7 @@
                         'm--is-large': iconSize=='large',
                         'm--has-border': propIconBorder }"></span>
     </div>
-    <m-accordion-transition :height-delta="24">
+    <m-accordion-transition :height-delta="skin == 'default' ? 24 : 0">
         <div class="m-accordion__body-wrap" v-if="!propDisabled && propOpen">
             <div class="m-accordion__body" :class="{ 'm--has-padding': paddingBody && padding }">
                 <slot></slot>
