--- a/src/components/textarea/textarea.html
+++ b/src/components/textarea/textarea.html
@@ -16,7 +16,9 @@
                    :focus="isFocus"
                    :empty="isEmpty"
                    :icon-name="iconName"
-                   :required-marker="requiredMarker">
+                   :required-marker="requiredMarker"
+                   :input-type="inputType"
+                   :tag-style="tagStyle">
         <m-textarea-resize class="m-textarea__input"
                   :disabled="!active"
                   :placeholder="placeholder"
