--- a/src/components/textfield/textfield.html
+++ b/src/components/textfield/textfield.html
@@ -16,7 +16,9 @@
                    :focus="isFocus"
                    :empty="isEmpty"
                    :required-marker="requiredMarker"
-                   :icon-name="iconName">
+                   :icon-name="iconName"
+                   :input-type="inputType"
+                   :tag-style="tagStyle">
         <input ref="input"
                class="m-textfield__input"
                :disabled="!active"
