--- a/src/components/dropdown/dropdown.html
+++ b/src/components/dropdown/dropdown.html
@@ -13,6 +13,7 @@
                    :required-marker="requiredMarker"
                    :width="inputStyletWidth"
                    :icon-name="iconName"
+                   :tag-style="tagStyle"
                    @mousedown="inputOnMousedown"
                    @mouseup="inputOnMouseup"
                    v-m-popup:popup>
