--- a/src/components/popup/popup.html
+++ b/src/components/popup/popup.html
@@ -7,7 +7,7 @@
               :placement="placement"
               :focus-management="focusManagement"
               :open-trigger="propOpenTrigger"
-              :trigger="trigger"
+              :trigger="propTrigger"
               :before-enter="beforeEnter"
               :enter="enter"
               :after-enter="afterEnter"
@@ -42,7 +42,7 @@
                :padding-body="paddingBody"
                :padding-footer="paddingFooter"
                :open-trigger="propOpenTrigger"
-               :trigger="trigger"
+               :trigger="propTrigger"
                :class-name="className"
                v-if="isMqMaxS">
         <div slot="trigger" v-if="hasTriggerSlot">
