--- a/src/components/accordion/accordion.html
+++ b/src/components/accordion/accordion.html
@@ -1,6 +1,14 @@
 <article class="m-accordion" :class="['m--is-' + propSkin, {'m--is-closed': !propOpen, 'm--is-disabled': propDisabled, 'm--has-icon-left': iconPosition != 'right', 'm--has-icon-large': iconSize=='large' }]">
-    <div tabindex="0" class="m-accordion__header" :class="{ 'm--has-padding': paddingHeader && padding }" @keyup.enter="toggleAccordion"
-        @click.prevent="toggleAccordion" ref="accordionHeader">
+    <div class="m-accordion__header"
+         :class="{ 'm--has-padding': paddingHeader && padding }"
+         tabindex="0"
+         :id="propId"
+         role="tab"
+         :aria-expanded="propOpen"
+         :aria-controls="'controls-' +propId"
+         @keyup.enter="toggleAccordion"
+         @click.prevent="toggleAccordion"
+         ref="accordionHeader">
         <div class="m-accordion__header__content">
             <slot name="header"></slot>
             <m-i18n k="m-accordion:open" class="m-accordion__hidden" v-if="!propOpen"></m-i18n>
@@ -12,7 +20,11 @@
                         'm--has-border': propIconBorder }"></span>
     </div>
     <m-accordion-transition :height-delta="skin == 'default' ? 24 : 0">
-        <div class="m-accordion__body-wrap" v-if="!propDisabled && propOpen">
+        <div class="m-accordion__body-wrap"
+             role="tabpanel"
+             :id="'controls-' +propId"
+             :aria-labelledby="propId"
+             v-if="propOpen">
             <div class="m-accordion__body" :class="{ 'm--has-padding': paddingBody && padding }">
                 <slot></slot>
             </div>
