Add aria and role for accessibility

--- a/src/components/navbar-item/navbar-item.html
+++ b/src/components/navbar-item/navbar-item.html
@@ -1,6 +1,8 @@
 <li class="m-navbar-item"
     :class="{'m--is-selected': isSelected,
              'm--is-disabled': isDisabled}"
+    role="menuitem"
+    :aria-selected="isSelected"
     @keyup.enter="onClick"
     @click="onClick">
     <slot></slot>
