Update accessibility: datepicker

--- a/src/components/datepicker/datepicker.html
+++ b/src/components/datepicker/datepicker.html
@@ -17,6 +17,7 @@
         <input type="text"
                ref="input"
                :id="id"
+               aria-haspopup="true"
                :aria-controls="id+'-controls-1 ' + id+'-controls-2'"
                :aria-expanded="open"
                :disabled="!active"
