--- a/src/components/menu/menu.html
+++ b/src/components/menu/menu.html
@@ -1,17 +1,28 @@
 <m-popup class="m-menu"
          :class="{ 'm--is-disabled': disabled }"
-         :open.sync="open"
+         :open.sync="propOpen"
          :padding="false"
          :placement="placement"
          :disabled="disabled"
          :close-on-backdrop="true"
          @open="onOpen"
          @close="onClose">
-    <m-icon-button slot="trigger" class="m-menu__button" icon-name="options" :disabled="disabled" :button-size="size" @click="onClick">
-        <m-i18n k="m-menu:open" v-if="!open"></m-i18n>
-        <m-i18n k="m-menu:close" v-if="open"></m-i18n>
+    <m-icon-button :id="id"
+                   class="m-menu__button"
+                   aria-haspopup="true"
+                   :aria-controls="id+'-controls'"
+                   :aria-expanded="propOpen"
+                   slot="trigger"
+                   :title="propTitle"
+                   icon-name="options"
+                   :disabled="disabled"
+                   :button-size="size"
+                   @click="onClick">
     </m-icon-button>
-    <ul class="m-menu__wrap" ref="menu">
+    <ul :id="id+'-controls'"
+        class="m-menu__wrap"
+        :aria-labelledby="id"
+        ref="menu">
         <slot></slot>
     </ul>
 </m-popup>
