--- a/src/components/tooltip/tooltip.html
+++ b/src/components/tooltip/tooltip.html
@@ -9,13 +9,32 @@
          :class-name="className"
          @open="onOpen"
          @close="onClose">
-    <m-icon-button slot="trigger" class="m-tooltip__icon" icon-name="information" :title="propTitle" button-size="22px" v-if="propMode == 'icon'">
-        <span aria-hidden="true">{{ open ? propCloseTitle : propOpenTitle }}</span>
+    <m-icon-button :id="id"
+                   class="m-tooltip__icon"
+                   aria-haspopup="true"
+                   :aria-controls="id+'-controls'"
+                   :aria-expanded="propOpen"
+                   slot="trigger"
+                   icon-name="information"
+                   :title="propTitle"
+                   button-size="22px"
+                   v-if="propMode == 'icon'">
     </m-icon-button>
-    <m-link slot="trigger" class="m-tooltip__link" mode="button" :underline="underline" v-if="propMode != 'icon'">
+    <m-link :id="id"
+            class="m-tooltip__link"
+            aria-haspopup="true"
+            :aria-controls="id+'-controls'"
+            :aria-expanded="propOpen"
+            slot="trigger"
+            mode="button"
+            :underline="underline"
+            v-if="propMode != 'icon'">
         <slot name="link"></slot>
     </m-link>
-    <div class="m-tooltip__body-container" :class="{ 'm--has-close-button': propCloseButton }">
+    <div :id="id+'-controls'"
+         class="m-tooltip__body-container"
+         :class="{ 'm--has-close-button': propCloseButton }"
+         :aria-labelledby="id">
         <div class="m-tooltip__close-button" tabindex="0"  @keyup.enter="close" @click="close" v-if="propCloseButton">
             <m-icon name="close" size="12px" :svg-tile="getCloseTitle"></m-icon>
         </div>
