Add prop trigger for m-popup; remove mouse leave for hover triggerMode

--- a/src/components/popup/popup.html
+++ b/src/components/popup/popup.html
@@ -7,7 +7,7 @@
               :placement="placement"
               :focus-management="focusManagement"
               :open-trigger="propOpenTrigger"
-              :trigger="trigger"
+              :trigger="propTrigger"
               :before-enter="beforeEnter"
               :enter="enter"
               :after-enter="afterEnter"
@@ -43,7 +43,7 @@
                :padding-body="paddingBody"
                :padding-footer="paddingFooter"
                :open-trigger="propOpenTrigger"
-               :trigger="trigger"
+               :trigger="propTrigger"
                :class-name="className"
                :preload="preload"
                v-if="isMqMaxS">
