M-menu jest test part 1

--- a/src/components/menu/menu.html
+++ b/src/components/menu/menu.html
@@ -13,6 +13,7 @@
                    :aria-controls="id+'-controls'"
                    :aria-expanded="propOpen"
                    slot="trigger"
+                   :skin="skin"
                    :title="propTitle"
                    icon-name="options"
                    :disabled="disabled"
