--- a/src/components/inplace-edit/inplace-edit.html
+++ b/src/components/inplace-edit/inplace-edit.html
@@ -1,30 +1,41 @@
 <div class="inplace-edit"
      :class="{'m--has-erreur': error && editMode,
-              'm--is-edit-mode': editMode && isMqMinS }">
+              'm--is-edit-mode': editMode && isMqMinS }"
+     @click="onClick">
     <slot name="readMode" v-if="!editMode || !isMqMinS"></slot>
-    <slot name="editMode" v-if="editMode && isMqMinS"></slot>
-    <m-accordion-transition>
-        <div class="inplace-edit__buttons-wrap"
-                v-if="editMode && isMqMinS">
-            <div class="inplace-edit__buttons">
-                <m-button :waiting="submitted" ref="confirm-control" skin="primary" @click="confirm">
-                    <m-i18n k="m-inplace-edit:save"></m-i18n>
-                </m-button>
-                <m-button :disabled="submitted" ref="cancel-control" skin="secondary" @click="cancel">
-                    <m-i18n k="m-inplace-edit:cancel"></m-i18n>
-                </m-button>
-            </div>
-        </div>
-    </m-accordion-transition>
-    <m-dialog :title="dialogTitle" :open="editMode" @close="cancel" v-if="!isMqMinS">
-        <slot name="editMode"></slot>
-        <template slot="footer">
-            <m-button :waiting="submitted" ref="confirm-control-mobile" skin="primary" @click="confirm">
-                <m-i18n k="m-inplace-edit:save"></m-i18n>
-            </m-button>
-            <m-button :disabled="submitted" ref="cancel-control-mobile" skin="secondary" @click="cancel">
-                <m-i18n k="m-inplace-edit:cancel"></m-i18n>
-            </m-button>
-        </template>
-    </m-dialog>
+    <template v-if="isMqMinS">
+        <transition duration="300">
+            <form v-show="editMode">
+                <slot name="editMode" v-if="editMode"></slot>
+                <m-accordion-transition>
+                    <div class="inplace-edit__buttons-wrap"
+                            v-if="editMode">
+                        <div class="inplace-edit__buttons">
+                            <m-button :waiting="submitted" ref="confirm-control" skin="primary" @click="confirm">
+                                <m-i18n k="m-inplace-edit:save"></m-i18n>
+                            </m-button>
+                            <m-button :disabled="submitted" ref="cancel-control" skin="secondary" @click="cancel">
+                                <m-i18n k="m-inplace-edit:cancel"></m-i18n>
+                            </m-button>
+                        </div>
+                    </div>
+                </m-accordion-transition>
+            </form>
+        </transition>
+    </template>
+    <template v-if="!isMqMinS">
+        <m-dialog :title="dialogTitle" :open="editMode" @close="cancel">
+            <form>
+                <slot name="editMode"></slot>
+                <div class="inplace-edit__buttons">
+                    <m-button :waiting="submitted" ref="confirm-control-mobile" skin="primary" @click="confirm">
+                        <m-i18n k="m-inplace-edit:save"></m-i18n>
+                    </m-button>
+                    <m-button :disabled="submitted" ref="cancel-control-mobile" skin="secondary" @click="cancel">
+                        <m-i18n k="m-inplace-edit:cancel"></m-i18n>
+                    </m-button>
+                </div>
+            </form>
+        </m-dialog>
+    </template>
 </div>
