--- a/src/components/inplace-edit/inplace-edit.html
+++ b/src/components/inplace-edit/inplace-edit.html
@@ -5,7 +5,7 @@
     <slot name="readMode" v-if="!editMode || !isMqMinS"></slot>
     <template v-if="isMqMinS">
         <transition duration="300">
-            <form v-show="editMode">
+            <form v-show="editMode" :aria-hidden="!editMode">
                 <slot name="editMode" v-if="editMode"></slot>
                 <m-accordion-transition>
                     <div class="inplace-edit__buttons-wrap"
