add requested code change for PR #127

--- a/src/components/navbar/navbar.html
+++ b/src/components/navbar/navbar.html
@@ -13,8 +13,8 @@
     <nav class="m-navbar__wrap" role="menubar" ref="wrap">
         <ul class="m-navbar__list" aria-hidden="true" ref="list">
             <slot></slot>
-            <li aria-hidden="true" class="m-navbar__line" :class="{ 'm--is-anim-active': isAnimActive }" v-if="isLightSkin" ref="line"></li>
-            <li aria-hidden="true" class="m-navbar__arrow" :class="{ 'm--is-anim-active': isAnimActive }" v-if="isArrowSkin" ref="arrow"></li>
+            <li aria-hidden="true" class="m-navbar__line test2" :class="{ 'm--is-anim-active': animActive }" v-if="isLightSkin" ref="line"></li>
+            <li aria-hidden="true" class="m-navbar__arrow" :class="{ 'm--is-anim-active': animActive }" v-if="isArrowSkin" ref="arrow"></li>
         </ul>
     </nav>
     <m-icon-button ref="buttonRight" class="m-navbar__button" :skin="buttonSkin" :button-size="ComputedHeight" icon-name="chevron"
