--- a/src/components/navbar/navbar.html
+++ b/src/components/navbar/navbar.html
@@ -13,7 +13,7 @@
     <nav class="m-navbar__wrap" role="menubar" ref="wrap">
         <ul class="m-navbar__list" aria-hidden="true" ref="list">
             <slot></slot>
-            <li aria-hidden="true" class="m-navbar__line test2" :class="{ 'm--is-anim-active': animActive }" v-if="isLightSkin" ref="line"></li>
+            <li aria-hidden="true" class="m-navbar__line" :class="{ 'm--is-anim-active': animActive }" v-if="isLightSkin" ref="line"></li>
             <li aria-hidden="true" class="m-navbar__arrow" :class="{ 'm--is-anim-active': animActive }" v-if="isArrowSkin" ref="arrow"></li>
         </ul>
     </nav>
