Add open props to file-upload

--- a/src/components/file-upload/file-upload.html
+++ b/src/components/file-upload/file-upload.html
@@ -1,4 +1,4 @@
-<m-dialog :title="title" ref="dialog" @open="onOpen" @close="onClose" :close-on-backdrop="false">
+<m-dialog :title="title" ref="dialog" :open="open" @open="onOpen" @close="onClose" :close-on-backdrop="false">
 
     <span slot="trigger">
         <slot></slot>
