--- a/src/components/dropdown/dropdown.html
+++ b/src/components/dropdown/dropdown.html
@@ -27,7 +27,7 @@
                @keydown.esc="inputOnKeydownEsc"
                @keydown.up.prevent="onKeydownUp"
                @keydown.down.prevent="onKeydownDown"
-               @keydown.tab="inputOnKeydownTab"
+               @keydown.tab="onKeydownTab"
                @focus="inputOnFocus"
                v-model="selectedText">
         <template slot="adjust-width-auto" v-if="width == 'auto'">{{ selectedText }}</template>
