--- a/src/components/file-upload/file-upload.html
+++ b/src/components/file-upload/file-upload.html
@@ -4,7 +4,7 @@
         <slot></slot>
     </span>
 
-    <div class="m-file-upload" v-m-file-drop="storeName">
+    <div class="m-file-upload" v-m-file-drop.keep-store="storeName">
 
         <m-message class="m-file-upload__error-message" state="error" v-if="hasRejectedFiles" :close-button="true" @close="onMessageClose">
             <p class="m-file-upload__error-message__title">
@@ -31,6 +31,7 @@
                 <m-icon name="drag-drop" size="48px"></m-icon>
                 <m-i18n k="m-file-upload:title"></m-i18n>
             </h2>
+            <m-file-select class="m-file-upload__drop-zone__button" skin="primary" :multiple="maxFiles > 1 ? true : false" :store-name="storeName" keep-store="true"></m-file-select>
             <p  v-if="isMqMinS" class="m-file-upload__drop-zone__or"><m-i18n k="m-file-upload:choice"></m-i18n></p>
             <m-file-select class="m-file-upload__drop-zone__button" skin="primary" :multiple="maxFiles > 1 ? true : false" :store-name="storeName"></m-file-select>
             <p class="m-file-upload__drop-zone__format" v-if="extensions"><m-i18n class="m-file-upload__drop-zone__format__label" k="m-file-upload:format"></m-i18n>: {{fileExtensions}}</p>
