--- a/src/components/inplace-edit/inplace-edit.html
+++ b/src/components/inplace-edit/inplace-edit.html
@@ -1,15 +1,15 @@
 <div class="m-inplace-edit"
-     :class="{'m--has-erreur': error && editMode,
-              'm--is-edit-mode': editMode && isMqMinS }"
+     :class="{'m--has-erreur': error && propEditMode,
+              'm--is-edit-mode': propEditMode && isMqMinS }"
      @click="onClick">
-    <slot name="readMode" v-if="!editMode || !isMqMinS"></slot>
+    <slot name="readMode" v-if="!propEditMode || !isMqMinS"></slot>
     <template v-if="isMqMinS">
         <transition duration="300">
-            <form v-show="editMode" :aria-hidden="!editMode">
-                <slot name="editMode" v-if="editMode"></slot>
+            <form v-show="propEditMode" :aria-hidden="!propEditMode">
+                <slot name="editMode" v-if="propEditMode"></slot>
                 <m-accordion-transition>
                     <div class="m-inplace-edit__buttons-wrap"
-                            v-if="editMode">
+                            v-if="propEditMode">
                         <div class="m-inplace-edit__buttons">
                             <m-button :waiting="submitted" ref="confirm-control" skin="primary" @click="confirm">
                                 <m-i18n k="m-inplace-edit:save"></m-i18n>
@@ -24,7 +24,7 @@
         </transition>
     </template>
     <template v-if="!isMqMinS">
-        <m-dialog :title="dialogTitle" :open="editMode" @close="cancel">
+        <m-dialog :title="dialogTitle" :open="propEditMode" @close="cancel">
             <form>
                 <slot name="editMode"></slot>
                 <div class="m-inplace-edit__buttons">
